force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/TVA_CFB__CloudFiles_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>DocuVault Settings</label>
</CustomObject>