force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Cloud_Search_Region__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Cloud_Search_Region__c</fullName>
    <label>Cloud Search Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>