force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Domain_Name__c</fullName>
    <label>Domain Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>