force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Enable_GeoLocation__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Enable_GeoLocation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable GeoLocation</label>
    <type>Checkbox</type>
</CustomField>