force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Enable_Google_URL_Shortener__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Enable_Google_URL_Shortener__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Google URL Shortner</label>
    <type>Checkbox</type>
</CustomField>