force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Enable_Lead_Trigger__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Enable_Lead_Trigger__c</fullName>
    <defaultValue>true</defaultValue>
    <description>To enable Trigger on lead when a lead is converted..</description>
    <label>Enable Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>