force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Google_API_Key__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Google_API_Key__c</fullName>
    <label>Google API Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>