force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Google_URL_Shortner_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Google_URL_Shortner_URL__c</fullName>
    <label>Google URL Shortner URL</label>
    <type>Url</type>
</CustomField>