force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Salesforce_URL__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Salesforce_URL__c</fullName>
    <label>Salesforce URL</label>
    <type>Url</type>
</CustomField>