force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Server_Side_Encryption__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Server_Side_Encryption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Server Side Encryption</label>
    <type>Checkbox</type>
</CustomField>