force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Upload_in_Folder_Share__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Upload_in_Folder_Share__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Upload in Folder Share</label>
    <type>Checkbox</type>
</CustomField>