force-app/main/default/objects/TVA_CFB__CloudFiles_Settings__c/fields/TVA_CFB__Web_To_Case_Attachment__c.field-meta.xml
<CustomField>
    <fullName>TVA_CFB__Web_To_Case_Attachment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Web To Case Attachment</label>
    <type>Checkbox</type>
</CustomField>